@@ -574,22 +574,22 @@ temporarily disabled
 # checksum tests
 <test checksums>
   blake2     = 5baec1cad5bf54287028749d83f2bf3e3ed09f0ee38a233f35dbda1361c6a67fd824e17c86ee3a85181038eb44836c17c42e6beff17fdf997075417914056992
-  blake2auth = 6d74340db1e77021861443d6cc0d1acedefed8c6d863789778ed800b99d32b6c96b782d087209ea180e983af51bd649064eff58ef0826c8996ae8017c35082b3
+  blake2auth = d7fff04bd63004f7a2ba914d9b2ccff22827230d3c546d97ebaa29cbe9fb2380b7948bc799486d512b4355c24f0cce423e746419098d4455af91898c4a06a5df
   key        = 9U3Dk2s
   <test check-checksum-copying>
-    cmd = $pcp -C -- ../COPYING
+    cmd = $pcp -C ../COPYING
     expect = /$blake2/
   </test>
   <test check-checksum-authenticated-copying>
-    cmd = $pcp -C $key ../COPYING
+    cmd = $pcp -x $key -C ../COPYING
     expect = /$blake2auth/
   </test>
   <test check-checksum-copying-stdin>
-    cmd = $pcp -C -- < ../COPYING
+    cmd = $pcp -C < ../COPYING
     expect = /$blake2/
   </test>
   <test check-checksum-multiple>
-    cmd = $pcp -C -- ../COPYING ../README
+    cmd = $pcp -C ../COPYING ../README
     expect = /README/
   </test>
 </test>
