@@ -1,3 +1,9 @@
+NEXT
+	Changed -C again: doesnt support a key argument
+	anymore, instead I use the facilities I already
+	have in place (-x and -X). Also, I don't generate
+	an extra hash for the key anymore.
+
 0.3.0
 	Changed publuc key signature storage, previously
 	I didn't add the actual signature, therefore a
